@@ -2,17 +2,17 @@
 Hash: SHA1
 
 AUX 50notmuch-gentoo.el 291 RMD160 7e036b8700f50cde6c3b27622193ddf08812229b SHA1 cc087fe76f750e84171a6ddef9dc10139b8450cc SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b
-EBUILD notmuch-9999.ebuild 2826 RMD160 945439f78b9459b3c00cedf1da0778b8da5a6d36 SHA1 f0a70c6e02c6460c10e5bbadaa5e5597461aa3fc SHA256 4a9ef23651f9d150fa1d7d6a19c3eeb9f312d0c4045f2e40b8e4bcf9c6335aaf
-MISC ChangeLog 1718 RMD160 b1eadff2fb92543a6d114a8dc7a564a2309f350e SHA1 2c2d25b481bba1b4a5c9eb58744b76abc3dd2917 SHA256 9d1c4af4522992fc310f8f2eb6ad96e8c87f106ccafc60c2f6c3d57a15f65448
-MISC metadata.xml 1003 RMD160 12fa19220fd58eade62c7aafc6a3c2bf5adb6ca5 SHA1 8be789b19b3140dc24694d5c535a7d8a4e8c4b0a SHA256 48f0e1b14cf9bd31f53f6bb481570ec1f067308e067913edbcea50a986b875bc
+EBUILD notmuch-9999.ebuild 3612 RMD160 03a783d8bcda99f57f5225c2159aa873c4f641a9 SHA1 a581f3dace11407b7d0c3815f371c1f121ae3acf SHA256 1a27b6b83c1ab071dacb5f4381188667cfa233305e27fe831b4b0df9f9325563
+MISC ChangeLog 1858 RMD160 8d8f766e0fe6f6e916c441966cbcae861d269059 SHA1 2a57f2c6cb200b6cc4abe0e1f720596b95738792 SHA256 1afb438a4345d99844731feb4473b1b4ca908158fff9ac0b99fbc177a8fdb1c4
+MISC metadata.xml 1041 RMD160 ac875cf25ade53b64452c1720b5ea9c1164ec153 SHA1 e365d3d5c6db5eb831fe8b334c4418a0b380054f SHA256 d8a3f9a046b198fe004bf49155441385b9aafd8d10bf523cbe70b037d849fd85
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPq46sAAoJEPATRTHh2/q1YOcIAIiRlgPugQbqnf8nO6hugsi7
-HuMdFdnLoXiKu+xvYolGLu4hW1W959wGeeIDrqcfLObOrRNpBJXV2pCJiHOmbsCg
-NTU6Fje8JwNlTiIkdr9B/hTQX1V2zrrM1qCaJdHO2ABeJBOrndWiLouNElmgFiSv
-sc+RkYFW1OHCZxDJmUjK3nJPfaJA5ALNHQGNIdUhQychYNoj3r8CR8yOB7JF3ajE
-EeVHxHXIF7VA7WBgBfYiVb9/nEMj4AgzM3AbDZY/yoU6TUHt93rQeUuKJcG2FHIk
-qp4hFgVA2wHoIZfbMqNWHFm5LaDHgf2NArUAsXPjksIZZBKt317A8HtTy72Zo2Q=
-=1W0l
+iQEcBAEBAgAGBQJPtCsIAAoJEPATRTHh2/q1J6kH/1PfCcMRnCwXl4Lo2oonefYW
+VqJeNu9nin7hWDIGfdb5UXOarsOCGAZt28G/Ga8ThTGmbbVRrc2xvbzC3+LPHUxs
+nXVVYxd9nd+93FNztZz6qZX8Mpn213dAH28DK4uIqeJb3EyMQ5phN38ZZ6yrzx87
+r0DBqY9xiNwB+H/RehGPnWf8M9q4sBdov6XyzH2T7sQYl2g2tIoDpeYNrfV5vdIr
+lupboN+wXpRuNL0GBoiMOvEm1aF2lcX781KyjtcirNypL1Ao67DXqDhnmBOWaQEZ
+YxapL+lOk92MeKy0cYiN8WuOIs58ifLAIKs3juyhWhgWED+7EV9c1WCSo56UalI=
+=wade
 -----END PGP SIGNATURE-----
