@@ -9,11 +9,12 @@
 		<flag name="doc">Install API documentation for enabled bindings</flag>
 		<flag name="crypt">Support decryption and verification of PGP/MIME
 			messages and in Emacs UI - encryption</flag>
-		<flag name="emacs">Install Notmuch client for Emacs (main client)</flag>
-		<flag name="nmbug">Install Experimental Tag Sharing /
-			Pseudo-Bug-Tracking for Notmuch
-			(http://notmuchmail.org/nmbug/)</flag>
-		<flag name="vim">Install Notmuch client for Vim (experimental)</flag>
+		<flag name="emacs">Install Emacs UI (the main one)</flag>
+		<flag name="mutt">Install helper script for Mutt</flag>
+		<flag name="nmbug">Install experimental tag sharing /
+			pseudo-bug-tracking script for Notmuch
+			(see http://notmuchmail.org/nmbug/)</flag>
+		<flag name="vim">Install Vim UI (experimental)</flag>
 	</use>
 	<longdescription lang="en">
 		Notmuch is a system for indexing, searching, reading, and tagging large
