@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild,
+  metadata.xml:
+  Synced with net-mail/notmuch-0.13::gentoo.
+
   10 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
   Enforce build with GMime 2.6.
 
